--- a/GifImageDemo/GifImageDemo.csproj
+++ b/GifImageDemo/GifImageDemo.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{93A94834-401D-4A39-9742-E5D4EE51AAD0}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <RootNamespace>GifImage</RootNamespace>
-    <AssemblyName>GifImage</AssemblyName>
+    <ProjectGuid>{444E2878-5E51-4E8B-B7A1-C6DF26DCD63F}</ProjectGuid>
+    <OutputType>WinExe</OutputType>
+    <RootNamespace>GifImageDemo</RootNamespace>
+    <AssemblyName>GifImageDemo</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -32,9 +32,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -50,15 +47,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CGif.cs" />
-    <Compile Include="GifImage.cs">
-      <SubType>UserControl</SubType>
+    <Compile Include="Form1.cs">
+      <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GifImage.Designer.cs">
-      <DependentUpon>GifImage.cs</DependentUpon>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="GifImage.resx">
-      <DependentUpon>GifImage.cs</DependentUpon>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -68,6 +66,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -81,6 +80,30 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Bk.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\小图.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Bird.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\动图.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\人体解刨图.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\特大尺寸图.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GifImage\GifImage.csproj">
+      <Project>{93A94834-401D-4A39-9742-E5D4EE51AAD0}</Project>
+      <Name>GifImage</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
